fix css on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,7 @@ body {
   margin: 0;
   display: flex;
   place-items: center;
-  min-width: 100vh;
+
   min-height: 100vh;
 }
 
